--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,12 @@ before_install:
 
 cache:
   yarn: true
+  directories:
+    - node_modules
 
 before_script:
   - yarn global add gulp-cli
-  - node -v && npm -v && yarn -v && git --version && gulp -v
 
 script:
+  - yarn run verify
   - yarn run build
