--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "verify": "node -v && npm -v && yarn -v && git --version && gulp -v",
     "dev": "gulp dev",
     "build": "gulp build",
+    "deploy": "gulp build:deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "gulp-debug": "^4.0.0",
     "gulp-eslint": "^5.0.0",
     "gulp-filter": "^5.1.0",
+    "gulp-gh-pages": "^0.6.0-6",
     "gulp-header": "^2.0.5",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^5.0.3",
