--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "title": "Adorade",
   "version": "1.0.0",
   "description": "Web Design Company",
-  "author": "Marian Bolojan",
+  "author": "Adorade",
   "homepage": "https://adorade.ro",
   "repository": "https://github.com/adorade/website",
   "scripts": {
