--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 #
 # Adorade (v1.0.0): .travis.yml
 # Copyright (c) 2019 Adorade. All Rights Reserved.
+# Licensed under MIT
 #
 # Travis continuous integration system configuration file.
 # Overview on how to customize the configuration is located at:
