--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "gulp dev",
     "build": "gulp build",
     "deploy": "gulp build:deploy",
+    "work": "gulp serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
