refactor(build): add support for esm module
- update gulp
- add esm module
- refactor tools code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,9 +33,9 @@
     "overrides": [
         {
             "files": [
-                "gulpfile.js",
+                "gulpfile.esm.js",
                 "**/vendor/js/**/*.js",
-                "util/**/*.js"
+                "tools/**/*.js"
             ],
             "rules": {
                 "semi": ["error", "always"]
