--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "ansi-colors": "^3.2.4",
     "babel-eslint": "^10.0.1",
-    "browser-sync": "^2.26.3",
-    "del": "^4.1.0",
+    "browser-sync": "^2.26.5",
+    "del": "^4.1.1",
     "eslint": "^5.16.0",
+    "esm": "^3.2.22",
     "fancy-log": "^1.3.3",
-    "gulp": "^4.0.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^8.0.0",
     "gulp-cached": "^1.1.1",
@@ -53,7 +54,7 @@
     "stylelint": "^10.0.1",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.6.0"
+    "stylelint-scss": "^3.6.1"
   },
   "engines": {
     "node": ">=8"
