--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "https://github.com/adorade/website",
   "scripts": {
     "verify": "node -v && npm -v && yarn -v && git --version && gulp -v",
-    "dev": "gulp dev",
+    "dev": "gulp",
     "build": "gulp build",
     "deploy": "gulp build:deploy",
     "work": "gulp serve",
