--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "gulp",
     "build": "gulp build",
     "deploy": "gulp build:deploy",
-    "work": "gulp serve",
+    "work": "gulp serve:watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
