--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ node_js:
   - "lts/*"
 
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
-  - export PATH=$HOME/.yarn/bin:$PATH
+  #- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.16.0
+  #- export PATH=$HOME/.yarn/bin:$PATH
+  - npm install -g yarn
 
 cache:
   yarn: true
