--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
         "no-multiple-empty-lines": ["error", {"max": 2, "maxEOF": 1, "maxBOF": 1}],
         "no-trailing-spaces": "error",
         "quotes": ["error", "single", {"avoidEscape": true}],
-        "semi": ["error", "never"]
+        "semi": ["error", "never"],
+        "space-before-function-paren": "error"
     },
     "overrides": [
         {
