--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,6 @@
 # https://eslint.org/docs/user-guide/configuring#ignoring-files-and-directories
 **/*.min.js
-**/dist
-**/.extra
-**/vendor
+dist
+.extra
+vendor
+tmp
