--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ language: node_js
 node_js:
   - "lts/*"
 
+git:
+  depth: 10
+
 before_install:
   #- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.16.0
   #- export PATH=$HOME/.yarn/bin:$PATH
