--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,14 @@
 # Overview on how to customize the configuration is located at:
 # http://docs.travis-ci.com/user/customizing-the-build/
 
-sudo: false
-
 language: node_js
+
 node_js:
   - "lts/*"
+
+os:
+  - linux
+  - osx
 
 git:
   depth: 10
