--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -81,9 +81,9 @@ rules:
   selector-no-vendor-prefix: true
   string-quotes: double
   value-keyword-case: lower
-  value-list-comma-newline-after: never-multi-line
+  value-list-comma-newline-after: always-multi-line
   value-list-comma-newline-before: never-multi-line
-  value-list-comma-space-after: always
+  value-list-comma-space-after: always-single-line
   value-no-vendor-prefix: true
 
   # -- Plugin Rules
