--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -77,7 +77,9 @@ rules:
   selector-max-specificity: null
   selector-max-type: 2
   selector-max-universal: 1
-  selector-no-qualifying-type: true
+  selector-no-qualifying-type:
+    - true
+    - ignore: [attribute]
   selector-no-vendor-prefix: true
   string-quotes: double
   value-keyword-case: lower
