--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -3,9 +3,9 @@ name: Node CI
 
 on:
   push:
-    branches: [master, content, develop]
+    branches: [master, content, develop, actions]
   pull_request:
-    branches: [master, content, develop]
+    branches: master
   schedule:
   - cron: 0 2 * * 1-5
 
@@ -43,8 +43,6 @@ jobs:
         yarn run verify
         yarn run build
       shell: bash
-      env:
-        CI: true
 
     # deploy web app using publish profile credentials
     # coming soon
