ci(actions): add a separate steps

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -36,12 +36,19 @@ jobs:
       with:
         node-version: ${{ matrix.node_version }}
 
-    # install dependencies, verify and build
-    - name: Clean install dependencies and build
-      run: |
-        yarn install
-        yarn run verify
-        yarn run build
+    # install dependencies
+    - name: Clean install dependencies
+      run: yarn install
+      shell: bash
+
+    # verify build tools
+    - name: Verify build tools
+      run: yarn run verify
+      shell: bash
+
+    # build proccess
+    - name: Build proccess
+      run: yarn run build
       shell: bash
 
     # deploy web app using publish profile credentials
