--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/cli": "7.8.4",
     "@babel/core": "7.9.0",
     "@babel/preset-env": "7.9.5",
+    "@rollup/plugin-babel": "5.0.0",
     "ansi-colors": "4.1.1",
     "babel-eslint": "10.1.0",
     "browser-sync": "2.26.7",
@@ -50,7 +51,6 @@
     "gulp-webp": "4.0.1",
     "minimist": "1.2.5",
     "rollup": "2.7.3",
-    "rollup-plugin-babel": "4.4.0",
     "stylelint": "13.3.3",
     "stylelint-config-standard": "20.0.0",
     "stylelint-order": "4.0.0",
