--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "animate.css": "4.1.0",
     "cookieconsent": "3.1.1",
     "jquery": "3.5.1",
-    "popper.js": "1.16.1",
-    "yall-js": "3.2.0"
+    "popper.js": "1.16.1"
   },
   "devDependencies": {
     "@babel/cli": "7.10.5",
