--- a/renovate.json
+++ b/renovate.json
@@ -3,26 +3,36 @@
     "config:base",
     ":maintainLockFilesWeekly",
     "schedule:nonOfficeHours",
-    ":assignee(adorade)"
+    ":assignAndReview(adorade)"
   ],
   "timezone": "Europe/Bucharest",
+  "labels": ["deps"],
   "packageRules": [
     {
       "packagePatterns": ["^@babel/"],
-      "groupName": "babel packages"
+      "groupName": "babel packages",
+      "labels": ["build"]
     },
     {
       "packagePatterns": ["^eslint|eslint$"],
-      "groupName": "eslint packages"
+      "groupName": "eslint packages",
+      "labels": ["lint"]
     },
     {
       "packagePatterns": ["^rollup|^@rollup/"],
       "groupName": "rollup packages",
-      "schedule": ["after 5pm on friday"]
+      "schedule": ["after 5pm on friday"],
+      "labels": ["build"]
     },
     {
       "packagePatterns": ["^stylelint|stylelint$"],
-      "groupName": "stylelint packages"
+      "groupName": "stylelint packages",
+      "labels": ["lint"]
+    },
+    {
+      "packagePatterns": ["^gulp"],
+      "groupName": "gulp packages",
+      "labels": ["gulp"]
     }
   ]
 }
