--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,12 @@ language: node_js
 node_js:
   - "lts/*"
 
-os:
-  - linux
-  - osx
+dist: focal
 
 git:
   depth: 10
 
 before_install:
-  #- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.16.0
-  #- export PATH=$HOME/.yarn/bin:$PATH
   - npm install -g yarn
 
 cache:
