--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -3,9 +3,9 @@ name: Node CI
 
 on:
   push:
-    branches: [master, content, develop, forms, theme]
+    branches: [main, content, develop, forms, theme]
   pull_request:
-    branches: master
+    branches: main
   schedule:
   - cron: 0 9 * * SAT
 
