--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "gulp-sass": "4.1.0",
     "gulp-size": "3.0.0",
     "gulp-stylelint": "13.0.0",
-    "gulp-uglify": "3.0.2",
+    "gulp-terser-js": "5.2.2",
     "gulp-webp": "4.0.1",
     "minimist": "1.2.5",
     "rollup": "2.28.2",
