--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "devDependencies": {
     "@babel/cli": "7.12.13",
     "@babel/core": "7.12.13",
+    "@babel/eslint-parser": "7.12.13",
     "@babel/preset-env": "7.12.13",
     "@rollup/plugin-babel": "5.2.3",
     "ansi-colors": "4.1.1",
-    "babel-eslint": "10.1.0",
     "browser-sync": "2.26.14",
     "del": "6.0.0",
     "eslint": "7.19.0",
