--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -5,11 +5,12 @@
 # ============================================================================
 ---
 # extends
-extends: stylelint-config-standard
+extends: [ stylelint-config-standard-scss ]
 # plugins
 plugins: [ stylelint-scss, stylelint-order ]
 # rules
 rules:
+  alpha-value-notation: number
   at-rule-empty-line-before: null
   at-rule-name-space-after: always
   at-rule-no-unknown: null
@@ -20,6 +21,7 @@ rules:
     - always
     - ignoreAtRules: [ if, else ]
   block-opening-brace-space-before: null
+  color-function-notation: legacy
   color-named: never
   comment-word-disallowed-list:
     - [ /^TODO:/, /^FIXME:/ ]
@@ -91,6 +93,9 @@ rules:
 
   # -- Plugin Rules
   scss/at-rule-no-unknown: true
+  scss/comment-no-empty: null
+  scss/no-global-function-names: null
+  scss/at-mixin-argumentless-call-parentheses: null
   scss/double-slash-comment-empty-line-before:
     - always
     - except: [ first-nested ]
