--- a/package.json
+++ b/package.json
@@ -50,16 +50,15 @@
     "gulp-replace": "1.1.3",
     "gulp-sass": "5.1.0",
     "gulp-size": "4.0.1",
-    "gulp-stylelint": "13.0.0",
+    "gulp-stylelint": "https://github.com/adorade/gulp-stylelint.git",
     "gulp-terser-js": "5.2.2",
     "gulp-webp": "4.0.1",
     "minimist": "1.2.5",
     "rollup": "2.63.0",
     "sass": "1.45.2",
-    "stylelint": "13.13.1",
-    "stylelint-config-standard": "22.0.0",
-    "stylelint-order": "4.1.0",
-    "stylelint-scss": "3.21.0",
+    "stylelint": "14.2.0",
+    "stylelint-config-standard-scss": "3.0.0",
+    "stylelint-order": "5.0.0",
     "workbox-build": "6.4.2"
   },
   "engines": {
