--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [main, content, develop, forms, theme]
   pull_request:
-    branches: main
+    branches: [main]
   schedule:
   - cron: 0 9 * * SAT
 
@@ -27,7 +27,7 @@ jobs:
 
     # use node.js matrix
     - name: Use Node.js ${{ matrix.node_version }}
-      uses: actions/setup-node@v2-beta
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node_version }}
 
