--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "adorade",
-  "title": "Adorade",
   "version": "1.0.0",
-  "description": "Web Design Company",
-  "author": "Adorade",
+  "description": "Your Web Design",
+  "author": {
+    "name": "Adorade",
+    "email": "office.adorade@gmail.com",
+    "url": "https://adorade.ro"
+  },
   "homepage": "https://adorade.ro",
   "repository": "https://github.com/adorade/website",
   "scripts": {
@@ -43,7 +46,7 @@
     "gulp-header": "2.0.9",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "8.0.0",
-    "gulp-inline-source": "4.0.0",
+    "gulp-inline-source-html": "1.0.3",
     "gulp-pug": "5.0.0",
     "gulp-pug-linter": "1.5.0",
     "gulp-rename": "2.0.0",
@@ -53,7 +56,6 @@
     "gulp-stylelint": "https://github.com/adorade/gulp-stylelint.git",
     "gulp-terser-js": "5.2.2",
     "gulp-webp": "4.0.1",
-    "minimist": "1.2.5",
     "rollup": "2.66.1",
     "sass": "1.49.0",
     "stylelint": "14.3.0",
