--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "gulp-stylelint": "https://github.com/adorade/gulp-stylelint.git",
     "gulp-terser-js": "5.2.2",
     "gulp-webp": "4.0.1",
+    "postcss": "8.4.18",
     "rollup": "3.2.3",
     "sass": "1.55.0",
     "stylelint": "14.14.0",
