--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "workbox-build": "6.5.4"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": "^14.13.1 || >=16.0.0"
   },
   "private": true,
   "license": "MIT"
