--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -10,25 +10,48 @@ extends: [ stylelint-config-standard-scss ]
 plugins: [ stylelint-scss, stylelint-order ]
 # rules
 rules:
-  alpha-value-notation: number
-  at-rule-empty-line-before: null
+  # Deprecation warnings
+  # https://github.com/stylelint/stylelint/blob/main/docs/user-guide/rules.md#deprecated
   at-rule-name-space-after: always
-  at-rule-no-unknown: null
-  at-rule-no-vendor-prefix: true
   at-rule-semicolon-space-before: never
   block-closing-brace-empty-line-before: null
   block-closing-brace-newline-after:
     - always
     - ignoreAtRules: [ if, else ]
   block-opening-brace-space-before: null
+  declaration-block-semicolon-newline-after: always-multi-line
+  declaration-block-semicolon-newline-before: never-multi-line
+  declaration-block-semicolon-space-after: always-single-line
+  indentation: 2
+  max-empty-lines: 2
+  max-line-length: null
+  media-feature-parentheses-space-inside: never
+  media-feature-range-operator-space-after: always
+  media-feature-range-operator-space-before: never
+  no-eol-whitespace: true
+  no-extra-semicolons: true
+  no-missing-end-of-source-newline: true
+  number-leading-zero: never
+  selector-list-comma-newline-after: always
+  selector-list-comma-newline-before: never-multi-line
+  selector-list-comma-space-after: always-single-line
+  selector-list-comma-space-before: never-single-line
+  selector-max-empty-lines: 1
+  string-quotes: double
+  value-list-comma-newline-after: always-multi-line
+  value-list-comma-newline-before: never-multi-line
+  value-list-comma-space-after: always-single-line
+
+  # Good
+  alpha-value-notation: number
+  at-rule-empty-line-before: null
+  at-rule-no-unknown: null
+  at-rule-no-vendor-prefix: true
   color-function-notation: legacy
   color-named: never
   comment-word-disallowed-list:
     - [ /^TODO:/, /^FIXME:/ ]
     - severity: warning
-  declaration-block-semicolon-newline-after: always-multi-line
-  declaration-block-semicolon-newline-before: never-multi-line
-  declaration-block-semicolon-space-after: always-single-line
   declaration-empty-line-before: never
   declaration-no-important: true
   declaration-property-unit-disallowed-list:
@@ -37,46 +60,32 @@ rules:
     font-size: [ 'rem', 'em', 'px', '%' ]
     /^animation/: [ 's' ]
     /^transition/: [ 's', 'ms' ]
+  declaration-property-value-no-unknown: true
   font-family-name-quotes: always-where-recommended
   font-weight-notation:
     - numeric
     - ignore: [ relative ]
   function-url-no-scheme-relative: true
   function-url-quotes: never
-  indentation: 2
   keyframe-selector-notation: percentage
   length-zero-no-unit: true
-  max-empty-lines: 2
-  max-line-length: null
   media-feature-name-no-unknown:
     - true
     - ignoreMediaFeatureNames: [ prefers-reduced-motion ]
   media-feature-name-no-vendor-prefix: true
-  media-feature-parentheses-space-inside: never
-  media-feature-range-operator-space-after: always
-  media-feature-range-operator-space-before: never
   no-descending-specificity: null
   no-duplicate-selectors: true
-  number-leading-zero: never
-  no-eol-whitespace: true
-  no-extra-semicolons: true
   no-empty-source: null
-  no-missing-end-of-source-newline: true
   property-no-vendor-prefix: true
   rule-empty-line-before:
     - always-multi-line
     - except: [ inside-block-and-after-rule, first-nested ]
       ignore: [ after-comment, inside-block ]
   selector-attribute-quotes: always
-  selector-list-comma-newline-after: always
-  selector-list-comma-newline-before: never-multi-line
-  selector-list-comma-space-after: always-single-line
-  selector-list-comma-space-before: never-single-line
   selector-max-attribute: 2
   selector-max-class: 4
   selector-max-combinators: 4
   selector-max-compound-selectors: 4
-  selector-max-empty-lines: 1
   selector-max-id: 0
   selector-max-specificity: null
   selector-max-type: 2
@@ -85,11 +94,7 @@ rules:
     - true
     - ignore: [attribute]
   selector-no-vendor-prefix: true
-  string-quotes: double
   value-keyword-case: lower
-  value-list-comma-newline-after: always-multi-line
-  value-list-comma-newline-before: never-multi-line
-  value-list-comma-space-after: always-single-line
   value-no-vendor-prefix: true
 
   # -- Plugin Rules
