--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "jquery": "3.6.4"
   },
   "devDependencies": {
-    "@adorade/gulp-stylelint": "15.1.3",
     "@babel/cli": "7.21.0",
     "@babel/core": "7.21.0",
     "@babel/eslint-parser": "7.19.1",
@@ -54,6 +53,7 @@
     "gulp-replace": "1.1.4",
     "gulp-sass": "5.1.0",
     "gulp-size": "4.0.1",
+    "gulp-stylelint-esm": "1.0.0",
     "gulp-terser-js": "5.2.2",
     "gulp-webp": "4.0.1",
     "postcss": "8.4.21",
