--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adorade",
+  "name": "website",
   "version": "2.1.0",
   "description": "Your Web Design",
   "author": {
@@ -13,7 +13,6 @@
     "verify": "node -v && npm -v && yarn -v && git --version && gulp -v",
     "dev": "gulp",
     "build": "gulp build --prod --silent",
-    "deploy": "gulp build --prod --silent && gulp build:deploy --silent",
     "start": "gulp serve:watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -42,7 +41,6 @@
     "gulp-data": "1.3.1",
     "gulp-debug": "4.0.0",
     "gulp-eslint": "6.0.0",
-    "gulp-gh-pages": "0.6.0-6",
     "gulp-header": "2.0.9",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "8.0.0",
