--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -1,6 +1,6 @@
 #
 # Adorade (v2.1.0): .stylelintrc.yaml
-# Copyright (c) 2019 - 2023 Adorade (https://adorade.ro)
+# Copyright (c) 2019-23 Adorade (https://adorade.ro)
 # Licensed under MIT
 # ============================================================================
 ---
