--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "2.1.0",
+  "version": "2.1.0-dev",
   "description": "Your Web Design",
   "author": {
     "name": "Adorade",
