--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "@popperjs/core": "2.11.8",
     "bootstrap": "5.3.2",
-    "cookieconsent": "3.1.1",
-    "jquery": "3.7.1"
+    "cookieconsent": "3.1.1"
   },
   "devDependencies": {
     "@babel/cli": "7.23.0",
