--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.8",
-    "bootstrap": "5.3.2",
-    "cookieconsent": "3.1.1"
+    "bootstrap": "5.3.2"
   },
   "devDependencies": {
     "@babel/cli": "7.23.0",
@@ -35,7 +34,6 @@
     "gulp": "4.0.2",
     "gulp-autoprefixer": "8.0.0",
     "gulp-cached": "1.1.1",
-    "gulp-concat": "2.6.1",
     "gulp-csso": "4.0.1",
     "gulp-data": "1.3.1",
     "gulp-debug": "4.0.0",
@@ -47,14 +45,13 @@
     "gulp-pug": "5.0.0",
     "gulp-pug-linter": "1.5.0",
     "gulp-rename": "2.0.0",
-    "gulp-replace": "1.1.4",
     "gulp-sass": "5.1.0",
     "gulp-size": "4.0.1",
     "gulp-stylelint-esm": "1.0.0",
     "gulp-terser-js": "5.2.2",
     "gulp-webp": "4.0.1",
     "postcss": "8.4.31",
-    "rollup": "4.1.4",
+    "rollup": "4.2.0",
     "sass": "1.69.5",
     "stylelint": "15.11.0",
     "stylelint-config-standard-scss": "11.0.0",
