--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -99,6 +99,7 @@ rules:
 
 # --- Plugin Rules
   scss/at-mixin-argumentless-call-parentheses: null
+  scss/at-import-no-partial-leading-underscore: null
   scss/at-rule-no-unknown: true
   scss/comment-no-empty: null
   scss/double-slash-comment-empty-line-before:
