--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "stylelint": "15.11.0",
     "stylelint-config-standard-scss": "11.1.0",
     "stylelint-order": "6.0.3",
+    "stylelint-stylistic": "0.4.3",
     "workbox-build": "7.0.0"
   },
   "engines": {
