chore(deps): add new stylelint config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -25,7 +25,7 @@
       "labels": ["build"]
     },
     {
-      "matchPackagePatterns": ["^stylelint|stylelint$"],
+      "matchPackagePatterns": ["^stylelint|stylelint$|stylelint-config$"],
       "groupName": "stylelint packages",
       "labels": ["lint"]
     },
