--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "5.3.2"
   },
   "devDependencies": {
+    "@adorade/stylelint-config": "1.0.1",
     "@babel/cli": "7.23.0",
     "@babel/core": "7.23.2",
     "@babel/eslint-parser": "7.22.15",
@@ -54,9 +55,6 @@
     "rollup": "4.3.0",
     "sass": "1.69.5",
     "stylelint": "15.11.0",
-    "stylelint-config-standard-scss": "11.1.0",
-    "stylelint-order": "6.0.3",
-    "stylelint-stylistic": "0.4.3",
     "workbox-build": "7.0.0"
   },
   "engines": {
