--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "workbox-build": "7.0.0"
   },
   "engines": {
-    "node": "^14.13.1 || >=16.0.0"
+    "node": ">=18.12.0"
   },
   "private": true,
   "license": "MIT"
