--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "postcss": "8.4.35",
     "rollup": "4.12.0",
     "sass": "1.71.0",
-    "stylelint": "16.2.1",
-    "workbox-build": "7.0.0"
+    "stylelint": "16.2.1"
   },
   "engines": {
     "node": ">=18.12.0"
