--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/eslint-parser": "7.24.1",
     "@babel/preset-env": "7.24.3",
     "@rollup/plugin-babel": "6.0.4",
+    "@stylistic/eslint-plugin-js": "1.7.0",
     "ansi-colors": "4.1.3",
     "browser-sync": "3.0.2",
     "del": "7.1.0",
@@ -38,7 +39,7 @@
     "gulp-csso": "4.0.1",
     "gulp-data": "1.3.1",
     "gulp-debug": "5.0.1",
-    "gulp-eslint": "6.0.0",
+    "gulp-eslint-new": "1.9.1",
     "gulp-header": "2.0.9",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "9.0.0",
