--- a/package.json
+++ b/package.json
@@ -18,31 +18,33 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.8",
-    "bootstrap": "5.3.2"
+    "bootstrap": "5.3.3"
   },
   "devDependencies": {
     "@adorade/stylelint-config": "2.0.1",
-    "@babel/cli": "7.24.1",
-    "@babel/core": "7.24.3",
-    "@babel/eslint-parser": "7.24.1",
-    "@babel/preset-env": "7.24.3",
+    "@babel/cli": "7.24.7",
+    "@babel/core": "7.24.7",
+    "@babel/eslint-parser": "7.24.7",
+    "@babel/preset-env": "7.24.7",
+    "@eslint/js": "9.4.0",
     "@rollup/plugin-babel": "6.0.4",
-    "@stylistic/eslint-plugin-js": "1.7.0",
+    "@stylistic/eslint-plugin-js": "2.1.0",
     "ansi-colors": "4.1.3",
     "browser-sync": "3.0.2",
     "del": "7.1.0",
-    "eslint": "8.57.0",
+    "eslint": "9.4.0",
     "fancy-log": "2.0.0",
+    "globals": "15.4.0",
     "gulp": "5.0.0",
     "gulp-autoprefixer": "9.0.0",
     "gulp-cached": "1.1.1",
     "gulp-csso": "4.0.1",
     "gulp-data": "1.3.1",
     "gulp-debug": "5.0.1",
-    "gulp-eslint-new": "1.9.1",
+    "gulp-eslint-new": "2.0.0",
     "gulp-header": "2.0.9",
     "gulp-htmlmin": "5.0.1",
-    "gulp-imagemin": "9.0.0",
+    "gulp-imagemin": "9.1.0",
     "gulp-inline-source-html": "1.0.3",
     "gulp-pug": "5.0.0",
     "gulp-pug-linter": "1.5.0",
@@ -53,12 +55,12 @@
     "gulp-terser-js": "5.2.2",
     "gulp-webp": "5.0.0",
     "postcss": "8.4.38",
-    "rollup": "4.13.2",
-    "sass": "1.72.0",
-    "stylelint": "16.3.1"
+    "rollup": "4.18.0",
+    "sass": "1.77.4",
+    "stylelint": "16.6.1"
   },
   "engines": {
-    "node": ">=18.12.0"
+    "node": "^18.18.0 || ^20.9.0 || >=21.1.0"
   },
   "private": true,
   "license": "MIT"
