--- a/package.json
+++ b/package.json
@@ -23,25 +23,25 @@
   "devDependencies": {
     "@adorade/stylelint-config": "3.0.0",
     "@babel/cli": "7.25.9",
-    "@babel/core": "7.25.9",
+    "@babel/core": "7.26.0",
     "@babel/eslint-parser": "7.25.9",
-    "@babel/preset-env": "7.25.9",
-    "@eslint/js": "9.13.0",
+    "@babel/preset-env": "7.26.0",
+    "@eslint/js": "9.16.0",
     "@rollup/plugin-babel": "6.0.4",
-    "@stylistic/eslint-plugin-js": "2.9.0",
+    "@stylistic/eslint-plugin-js": "2.11.0",
     "ansi-colors": "4.1.3",
     "browser-sync": "3.0.3",
     "del": "8.0.0",
-    "eslint": "9.13.0",
+    "eslint": "9.16.0",
     "fancy-log": "2.0.0",
-    "globals": "15.11.0",
+    "globals": "15.13.0",
     "gulp": "5.0.0",
     "gulp-autoprefixer": "9.0.0",
     "gulp-cached": "1.1.1",
     "gulp-csso": "4.0.1",
     "gulp-data": "1.3.1",
     "gulp-debug": "5.0.1",
-    "gulp-eslint-new": "2.3.0",
+    "gulp-eslint-new": "2.4.0",
     "gulp-header": "2.0.9",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "9.1.0",
@@ -49,15 +49,15 @@
     "gulp-pug": "5.0.0",
     "gulp-pug-linter": "1.5.0",
     "gulp-rename": "2.0.0",
-    "gulp-sass": "5.1.0",
+    "gulp-sass": "6.0.0",
     "gulp-size": "5.0.0",
     "gulp-stylelint-esm": "3.0.0",
     "gulp-terser-js": "5.2.2",
     "gulp-webp": "5.0.0",
-    "postcss": "8.4.47",
-    "rollup": "4.24.0",
-    "sass": "1.80.3",
-    "stylelint": "16.10.0"
+    "postcss": "8.4.49",
+    "rollup": "4.28.0",
+    "sass-embedded": "1.81.0",
+    "stylelint": "16.11.0"
   },
   "engines": {
     "node": "^18.18.0 || ^20.9.0 || >=21.1.0"
