--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "verify": "node -v && npm -v && yarn -v && git --version && gulp -v",
     "dev": "gulp",
-    "build": "gulp build --prod --silent",
+    "build": "gulp build --prod --silent --no-experimental-require-module",
     "start": "gulp serve:watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
